# sdio

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  emmc.rs  lib.rs  sd.rs  sdio.rs  spi.rs
tests/: tests.rs
